// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Identity reducer handles actions - setLoading 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": null,
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles actions - setLoadingMessage 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": null,
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": true,
    "message": "This is a loading message",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles actions - setShippingData 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "Rumble",
      "lastName": "Fish",
      "street": "RumbleFish street",
      "country": "RumbleFish country",
      "region": "Fish Region",
      "city": "Fishville",
      "postalCode": "1337-455",
    },
    "balance": null,
    "lockedBalance": null,
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles actions handles setBalance 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": "2.34",
    "lockedBalance": null,
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles actions handles setErrors 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": null,
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "errors": [Error: this is some error],
}
`;

exports[`Identity reducer handles actions handles setFetchingBalance to false 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": null,
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles actions handles setFetchingBalance to true 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": null,
  },
  "fetchingBalance": true,
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles actions handles setIdentity 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "test-id",
    "address": "testaddress",
    "transparentAddress": "transparent-test-address",
    "signerPrivKey": "test-hex-key",
    "signerPubKey": "test-hex-key",
    "name": "Saturn",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": null,
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles actions handles setLockedBalance 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": "2.34",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles epics - fetchBalance creates shield balance operation 1`] = `
Immutable.Map {
  "test-op-id": Immutable.Operation {
    "opId": "test-op-id",
    "type": "shieldBalance",
    "meta": Immutable.Record {
      "amount": "0.00224",
      "from": "transparent-test-address",
      "to": "testaddress",
    },
    "txId": null,
    "error": null,
    "status": "pending",
  },
}
`;

exports[`Identity reducer handles epics - fetchBalance fetches transparent and private balances 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "test-id",
    "address": "testaddress",
    "transparentAddress": "transparent-test-address",
    "signerPrivKey": "test-hex-key",
    "signerPubKey": "test-hex-key",
    "name": "Saturn",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": "2.2352",
    "lockedBalance": "0",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles epics - fetchBalance handles errors 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "test-id",
    "address": "testaddress",
    "transparentAddress": "transparent-test-address",
    "signerPrivKey": "test-hex-key",
    "signerPubKey": "test-hex-key",
    "name": "Saturn",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": null,
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "errors": "node error",
}
`;

exports[`Identity reducer handles epics handles createIdentity bootstraps general for mainnet 1`] = `
Array [
  Object {
    "address": "zs1gj85kyte6lar223qdk0x2l2krua0xs4wpmmkz5ffqyya9ea92lnn9d02tpg6eavqefptu8p83tw",
    "description": "Store data about users.",
    "keys": Object {
      "ivk": "zivks1257u0x5aspyrclysawre5duaxfck2txmv7lm2tjudlyh4flh55zquklc2s",
    },
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "RegisteredUsers",
    "private": true,
    "unread": 0,
  },
  Object {
    "address": "zs1fcs4lt0pavh0zf3qnzt2lf4cu2krm6y96czpmqzheph3ya43zhfr6nh6khjs0g5xgsgcj4p775r",
    "description": "This is a general channel available to all users of Zbay by default.",
    "keys": Object {
      "ivk": "zivks19kx22qytvd48u06qk52prjnjx66d3g09a6mulawp25n8v6xk0vqqwuydge",
    },
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "General",
    "private": true,
    "unread": 0,
  },
]
`;

exports[`Identity reducer handles epics handles createIdentity bootstraps general for testnet 1`] = `
Array [
  Object {
    "address": "ztestsapling1ggtntm4dgfc0remdxzex0pz722swjtqxc7wxj4eeqksmups04dkhjvcj5vcklmud2y3yvgj302m",
    "description": "Store data about users.",
    "keys": Object {
      "ivk": "zivktestsapling1k93jxuecldthr9myy9d0svsy5dz57xvtcw7hyh9wj9xqy4ehfsqszlhdce",
    },
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "RegisteredUsers",
    "private": true,
    "unread": 0,
  },
  Object {
    "address": "ztestsapling1dfjv308amnk40s89trkvz646ne69553us0g858mmpgsw540efgftn4tf25gts2cttg3jgk9y8lx",
    "description": "This is a general channel available to all users of Zbay by default.",
    "keys": Object {
      "ivk": "zivktestsapling1algnz2x84pqcnfdxrlntw73wpuqm3v568cepf5tuctyusm9javpqyjyzqy",
    },
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "General",
    "private": true,
    "unread": 0,
  },
]
`;

exports[`Identity reducer handles epics handles createIdentity creates identity in vault 1`] = `
Array [
  Array [
    Object {
      "address": "sapling-private-address",
      "keys": Object {
        "sk": "sapling-private-address-spending-key",
        "tpk": "transparent-address-private-key",
      },
      "name": "Mercury",
      "signerPrivKey": "test-hex-key",
      "signerPubKey": "test-hex-key",
      "transparentAddress": "transparent-address",
    },
  ],
]
`;

exports[`Identity reducer handles epics handles createIdentity returns created identity 1`] = `
Object {
  "address": "sapling-private-address",
  "id": "thisisatestid",
  "keys": Object {
    "sk": "sapling-private-address-spending-key",
    "tpk": "transparent-address-private-key",
  },
  "name": "Mercury",
  "signerPrivKey": "test-hex-key",
  "signerPubKey": "test-hex-key",
  "transparentAddress": "transparent-address",
}
`;

exports[`Identity reducer handles epics handles set identity - loads channels 1`] = `
Immutable.List [
  Immutable.Map {
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "Channel 2",
    "private": true,
    "address": "zs1testaddress2",
    "unread": 2,
    "description": "",
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-2",
    },
  },
  Immutable.Map {
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "Channel 1",
    "private": true,
    "address": "zs1testaddress1",
    "unread": 1,
    "description": "Channel about 1",
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-1",
    },
  },
  Immutable.Map {
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "General",
    "private": true,
    "address": "ztestsapling1dfjv308amnk40s89trkvz646ne69553us0g858mmpgsw540efgftn4tf25gts2cttg3jgk9y8lx",
    "unread": 0,
    "description": "This is a general channel available to all users of Zbay by default.",
    "keys": Immutable.Map {
      "ivk": "zivktestsapling1algnz2x84pqcnfdxrlntw73wpuqm3v568cepf5tuctyusm9javpqyjyzqy",
    },
  },
  Immutable.Map {
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "Channel 0",
    "private": true,
    "address": "zs1testaddress0",
    "unread": 0,
    "description": "",
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-0",
    },
  },
]
`;

exports[`Identity reducer handles epics handles set identity - sets identity 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "test-id",
    "address": "testaddress",
    "transparentAddress": "transparent-test-address",
    "signerPrivKey": "test-hex-key",
    "signerPubKey": "test-hex-key",
    "name": "Saturn",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": "2.2352",
    "lockedBalance": "0",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": false,
    "message": "Loading users and messages",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles epics handles updateShippingData - finishes form submitting 1`] = `
Array [
  Array [
    false,
  ],
]
`;

exports[`Identity reducer handles epics handles updateShippingData - sets shipping data in store 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "test-id",
    "address": "testaddress",
    "transparentAddress": "transparent-test-address",
    "signerPrivKey": "test-hex-key",
    "signerPubKey": "test-hex-key",
    "name": "Saturn",
    "shippingData": Immutable.ShippingData {
      "firstName": "Rumble",
      "lastName": "Fish",
      "street": "RumbleFish street",
      "country": "RumbleFish country",
      "region": "Fish Region",
      "city": "Fishville",
      "postalCode": "1337-455",
    },
    "balance": null,
    "lockedBalance": null,
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": false,
    "message": "Loading users and messages",
  },
  "errors": "node error",
}
`;

exports[`Identity reducer handles epics handles updateShippingData - sets shipping data in vault 1`] = `
Array [
  Array [
    "test-id",
    Object {
      "city": "Fishville",
      "country": "RumbleFish country",
      "firstName": "Rumble",
      "lastName": "Fish",
      "postalCode": "1337-455",
      "region": "Fish Region",
      "street": "RumbleFish street",
    },
  ],
]
`;
